[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/ui_elements/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/ui_elements/BuffMonitor.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/OnScreenUI.gd" type="Script" id=3]
[ext_resource path="res://interface/theme/Interface.theme" type="Theme" id=4]
[ext_resource path="res://interface/ui_elements/SelectedSpellIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/ui_elements/ShieldBar.tscn" type="PackedScene" id=6]

[node name="OnScreenUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
margin_left = 21.0
margin_top = 23.0
margin_right = 385.0
margin_bottom = 77.0

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -155.0
margin_top = 21.0
margin_right = -23.0
margin_bottom = 81.0
grow_horizontal = 0
text = "0000"
align = 2
valign = 1

[node name="BuffMonitor" parent="." instance=ExtResource( 2 )]

[node name="SelectedSpellIcon" parent="." instance=ExtResource( 5 )]
margin_left = 1385.0
margin_top = 11.0
margin_right = 1684.0
margin_bottom = 108.0

[node name="ShieldBar" parent="." instance=ExtResource( 6 )]
margin_left = 21.0
margin_top = 86.0
margin_right = 385.0
margin_bottom = 140.0
custom_constants/separation = 8
shield = 5
